--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <div class="example-container">
       <div id="example-scanning-overlay" class="">
         <div class="inner">
-          <img src="./assets/exbizcard.png">
+          <img src="./assets/exbizcard-preview.png">
           <div class="scanline"></div>
         </div>
       </div>
