testing gltf fix

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <img id="coffeemachine-preview" src="./assets/portfolio/exbizcard.png">
           <img id="peak-preview" src="./assets/portfolio/exbizcard1.png">
           
-          <a-asset-item id="avatarModel" src="./assets/EX.glb"></a-asset-item>
+          <a-asset-item id="avatarModel" src="./assets/exGLTF/EX.gltf"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 10000; objects: .clickable" camera="" rotation="" wasd-controls=""></a-camera>
