--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         const portfolio = document.querySelector("#portfolio-panel");
         const portfolioLeftButton = document.querySelector("#portfolio-left-button");
         const portfolioRightButton = document.querySelector("#portfolio-right-button");
-        const exintrovidPreviewButton = document.querySelector("#exintrovid-preview-button");
+        const pmaPlayButton = document.querySelector("#pma-play-button");
+        const fsmPlayButton = document.querySelector("#fsm-play-button");
+        const itc3dPlayButton = document.querySelector("#itc3d-play-button");
+
 
         let y = 0;
         let currentItem = 0;
@@ -85,16 +88,42 @@
               showPortfolioItem(currentItem);
             });
 
-            exintrovidPreviewButton.addEventListener('click', () => {
-              exintrovidPreviewButton.setAttribute("visible", false);
+            pmaPlayButton.addEventListener('click', () => {
+              pmaPlayButton.setAttribute("visible", false);
               const testVideo = document.createElement( "video" );
               const canplayWebm = testVideo.canPlayType( 'video/webm; codecs="vp8, vorbis"' );
               if (canplayWebm == "") {
-                document.querySelector("#exintrovid-video-link").setAttribute("src", "#exintrovid-video-mp4");
-                document.querySelector("#exintrovid-video-mp4").play();
+                document.querySelector("#pma-about-video-link").setAttribute("src", "#pma-about-video-mp4");
+                document.querySelector("#pma-about-video-mp4").play();
               } else {
-                document.querySelector("#exintrovid-video-link").setAttribute("src", "#exintrovid-video-webm");
-                document.querySelector("#exintrovid-video-webm").play();
+                document.querySelector("#pma-about-video-link").setAttribute("src", "#pma-about-video-webm");
+                document.querySelector("#pma-about-video-webm").play();
+              }
+            });
+
+            fsmPlayButton.addEventListener('click', () => {
+              fsmPlayButton.setAttribute("visible", false);
+              const testVideo = document.createElement( "video" );
+              const canplayWebm = testVideo.canPlayType( 'video/webm; codecs="vp8, vorbis"' );
+              if (canplayWebm == "") {
+                document.querySelector("#fsm-about-video-link").setAttribute("src", "#fsm-about-video-mp4");
+                document.querySelector("#fsm-about-video-mp4").play();
+              } else {
+                document.querySelector("#fsm-about-video-link").setAttribute("src", "#fsm-about-video-webm");
+                document.querySelector("#fsm-about-video-webm").play();
+              }
+            });
+
+            itc3dPlayButton.addEventListener('click', () => {
+              itc3dPlayButton.setAttribute("visible", false);
+              const testVideo = document.createElement( "video" );
+              const canplayWebm = testVideo.canPlayType( 'video/webm; codecs="vp8, vorbis"' );
+              if (canplayWebm == "") {
+                document.querySelector("#itc3d-about-video-link").setAttribute("src", "#itc3d-about-video-mp4");
+                document.querySelector("#itc3d-about-video-mp4").play();
+              } else {
+                document.querySelector("#itc3d-about-video-link").setAttribute("src", "#itc3d-about-video-webm");
+                document.querySelector("#itc3d-about-video-webm").play();
               }
             });
 
@@ -243,11 +272,15 @@
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
-          <img id="exintrovid-preview" src="./assets/portfolio/exintrovid-preview.png">
-          <video id="exintrovid-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
-          <video id="exintrovid-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
-          <img id="coffeemachine-preview" src="./assets/portfolio/exbizcard.png">
-          <img id="peak-preview" src="./assets/portfolio/exbizcard1.png">
+          <img id="pma-about-preview-img" src="./assets/portfolio/exintrovid-preview.png">
+          <video id="pma-about-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
+          <video id="pma-about-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
+          <img id="fsm-about-preview-img" src="./assets/portfolio/exbizcard.png">
+          <video id="fsm-about-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
+          <video id="fsm-about-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
+          <img id="itc3d-about-preview-img" src="./assets/portfolio/exbizcard1.png">
+          <video id="itc3d-about-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
+          <video id="itc3d-about-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
           
           <a-asset-item id="avatarModel" src="./assets/EX.gltf"></a-asset-item>
         </a-assets>
@@ -258,19 +291,19 @@
           <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0" material="" geometry=""></a-plane>
 
           <a-entity visible="false" id="portfolio-panel" position="0 0 -0.01">
-            <a-text value="Portfolio" color="black" text-align="center" width="2" position="0 0.4 0" text=""></a-text>
-
-            <a-entity id="portfolio-item0">
-              <a-video id="exintrovid-video-link" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0 0 0" material="" geometry=""></a-video>
-              <a-image id="exintrovid-preview-button" class="clickable" src="#exintrovid-preview" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+            <a-entity id="pma-about-video">
+              <a-video id="pma-about-video-link" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0 0 0" material="" geometry=""></a-video>
+              <a-image id="pma-play-button" class="clickable" src="#icon-play" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
             </a-entity>
 
-            <a-entity id="portfolio-item1" visible="false">
-              <a-image class="clickable" src="#coffeemachine-preview" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+            <a-entity id="fsm-about-video" visible="false">
+              <a-image class="clickable" src="#fsm-about-preview-img" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+              <a-image id="fsm-play-button" class="clickable" src="#icon-play" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
             </a-entity>
 
-            <a-entity id="portfolio-item2" visible="false">
-              <a-image class="clickable" src="#peak-preview" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+            <a-entity id="itc3d-about-video" visible="false">
+              <a-image class="clickable" src="#itc3d-about-preview-img" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+              <a-image id="itc3d-play-button" class="clickable" src="#icon-play" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
             </a-entity>
 
             <a-image visible="false" id="portfolio-left-button" class="clickable" src="#icon-left" position="-0.7 0 0" height="0.15" width="0.15" material="" geometry=""></a-image>
@@ -286,9 +319,9 @@
 
           <a-image visible="false" id="location-button" class="clickable" src="#icon-location" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-gltf-model id="avatar" rotation="0 0 0" position="0 -0.25 0" scale="0.004 0.004 0.004" src="#avatarModel" gltf-model=""></a-gltf-model>
+          <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
 
-          <a-text id="text" class="clickable" value="" color="black" text-align="center" width="2" position="0 -1 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
+          <a-text id="text" class="clickable" value="" color="#00b6e5" align="center" width="2" position="0 -0.5 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
         </a-entity>
 
         <canvas class="a-canvas a-mouse-cursor-hover" data-aframe-canvas="true" width="1592" height="1828"></canvas>
