fix icon video and textbox link resize

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <a-entity visible="false" id="portfolio-panel" position="0 0 -0.01">
             <a-entity id="pma-about-video">
               <a-video id="pma-about-video-link" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0 0 0" material="" geometry=""></a-video>
-              <a-image id="pma-play-button" class="clickable" src="#icon-play" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
+              <a-image id="pma-play-button" class="clickable" src="#pma-about-preview-img" alpha-test="0.5" position="0 0 0" height="0.552" width="1" material="" geometry=""></a-image>
             </a-entity>
 
             <a-entity id="fsm-about-video" visible="false">
@@ -321,7 +321,7 @@
 
           <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
 
-          <a-text id="text" class="clickable" value="" color="#00b6e5" align="center" width="2" position="0 -0.5 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
+          <a-text id="text" class="clickable" value="" color="black" align="center" width="2" position="0 -1 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
         </a-entity>
 
         <canvas class="a-canvas a-mouse-cursor-hover" data-aframe-canvas="true" width="1592" height="1828"></canvas>
