--- a/index.html
+++ b/index.html
@@ -11,44 +11,50 @@
     <script>
       const showInfo = () => {
         let y = 0;
-        const profileButton = document.querySelector("#profile-button");
+        const phoneButton = document.querySelector("#phone-button");
         const webButton = document.querySelector("#web-button");
         const emailButton = document.querySelector("#email-button");
-        const locationButton = document.querySelector("#location-button");
+        const morelinksButton = document.querySelector("#more-links-button");
         const text = document.querySelector("#text");
 
-        profileButton.setAttribute("visible", true);
-        setTimeout(() => {
-          webButton.setAttribute("visible", true);
-        }, 300);
+          phoneButton.setAttribute("visible", true);
         setTimeout(() => {
           emailButton.setAttribute("visible", true);
+        }, 300);
+        setTimeout(() => {
+          webButton.setAttribute("visible", true);
         }, 600);
         setTimeout(() => {
-          locationButton.setAttribute("visible", true);
+          morelinksButton.setAttribute("visible", true);
         }, 900);
 
         let currentTab = '';
-        webButton.addEventListener('click', function (evt) {
-          text.setAttribute("value", "https://empyrealx.com");
-          currentTab = 'web';
+        phoneButton.addEventListener('click', function (evt) {
+          text.setAttribute("value", "(317) 828-6380");
+          currentTab = 'phone';
         });
         emailButton.addEventListener('click', function (evt) {
           text.setAttribute("value", "jaelenharrell@empyrealx.com");
           currentTab = 'email';
         });
-        profileButton.addEventListener('click', function (evt) {
-          text.setAttribute("value", "Creative Technology Solutions: Consultations, Mobile Apps, Marketing, Commercial Products & More");
-          currentTab = 'profile';
+        webButton.addEventListener('click', function (evt) {
+          text.setAttribute("value", "www.empyrealx.com");
+          currentTab = 'web';
         });
-        locationButton.addEventListener('click', function (evt) {
-          console.log("loc");
-          text.setAttribute("value", "Indianapolis, IN (relocating to San Diego soon!)");
-          currentTab = 'location';
+        morelinksButton.addEventListener('click', function (evt) {
+          console.log("links");
+          text.setAttribute("value", "View more links");
+          currentTab = 'morelinks';
         });
 
         text.addEventListener('click', function (evt) {
           if (currentTab === 'web') {
+            window.location.href="https://empyrealx.com";
+          }
+        });
+
+        text.addEventListener('click', function (evt) {
+          if (currentTab === 'morelinks') {
             window.location.href="https://empyrealx.com";
           }
         });
@@ -145,7 +151,7 @@
             clearInterval(id);
             onDone();
           }
-          avatar.setAttribute("position", "0 -0.25 " + z);
+          avatar.setAttribute("position", "0 0 " + z);
         }, 10);
       }
 
@@ -266,7 +272,7 @@
         <a-assets>
           <img id="card" src="./assets/exbizcard.png">
           <img id="icon-web" src="./assets/icons/web.png">
-          <img id="icon-location" src="./assets/icons/location.png">
+          <img id="icon-more links" src="./assets/icons/location.png">
           <img id="icon-profile" src="./assets/icons/profile.png">
           <img id="icon-phone" src="./assets/icons/phone.png">
           <img id="icon-email" src="./assets/icons/email.png">
@@ -310,13 +316,13 @@
             <a-image visible="false" id="portfolio-right-button" class="clickable" src="#icon-right" position="0.7 0 0" height="0.15" width="0.15" material="" geometry=""></a-image>
           </a-entity>
 
-          <a-image visible="false" id="profile-button" class="clickable" src="#icon-profile" position="-0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="phone-button" class="clickable" src="#icon-phone" position="-0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="-0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="email-button" class="clickable" src="#icon-email" position="-0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="email-button" class="clickable" src="#icon-email" position="0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="location-button" class="clickable" src="#icon-location" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="more-links-button" class="clickable" src="#icon-location" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
           <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
 
