more links icon error fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         const phoneButton = document.querySelector("#phone-button");
         const emailButton = document.querySelector("#email-button");
         const webButton = document.querySelector("#web-button");
-        const morelinksButton = document.querySelector("#more-links-button");
+        const morelinksButton = document.querySelector("#morelinks-button");
         const text = document.querySelector("#text");
 
           phoneButton.setAttribute("visible", true);
@@ -274,7 +274,7 @@
           <img id="icon-phone" src="./assets/icons/phone.png">
           <img id="icon-email" src="./assets/icons/email.png">
           <img id="icon-web" src="./assets/icons/web.png">
-          <img id="icon-more-links" src="./assets/icons/more-links.png">
+          <img id="icon-morelinks" src="./assets/icons/more-links.png">
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
@@ -321,7 +321,7 @@
 
           <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="more-links-button" class="clickable" src="#icon-more-links" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="morelinks-button" class="clickable" src="#icon-morelinks" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
           <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
 
