--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
           <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="morelinks-button" class="clickable" src="#icon-morelinks" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="morelinks-button" class="clickable" src="#icon-morelinks" alpha-test="0.5" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
           <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
 
