more links icon error fix4

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         const phoneButton = document.querySelector("#phone-button");
         const emailButton = document.querySelector("#email-button");
         const webButton = document.querySelector("#web-button");
-        const morelinksButton = document.querySelector("#morelinks-button");
+        const locationButton = document.querySelector("#location-button");
         const text = document.querySelector("#text");
 
         phoneButton.setAttribute("visible", true);
@@ -25,7 +25,7 @@
           webButton.setAttribute("visible", true);
         }, 600);
         setTimeout(() => {
-          morelinksButton.setAttribute("visible", true);
+          locationButton.setAttribute("visible", true);
         }, 900);
 
         let currentTab = '';
@@ -41,10 +41,10 @@
           text.setAttribute("value", "www.empyrealx.com");
           currentTab = 'web';
         });
-        morelinksButton.addEventListener('click', function (evt) {
+        locationButton.addEventListener('click', function (evt) {
           console.log("links");
           text.setAttribute("value", "View more links");
-          currentTab = 'morelinks';
+          currentTab = 'location';
         });
 
         text.addEventListener('click', function (evt) {
@@ -244,7 +244,7 @@
           <img id="icon-phone" src="./assets/icons/phone.png">
           <img id="icon-email" src="./assets/icons/email.png">
           <img id="icon-web" src="./assets/icons/web.png">
-          <img id="icon-morelinks" src="./assets/icons/more-links.png">
+          <img id="icon-location" src="./assets/icons/more-links.png">
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
@@ -291,7 +291,7 @@
 
           <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="morelinks-button" class="clickable" src="#icon-morelinks" alpha-test="0.5" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="location-button" class="clickable" src="#icon-location" alpha-test="0.5" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
           <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
 
