more links icon error fix5

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             window.location.href="https://empyrealx.com";
           }
         });
-
       }
 
       const showPortfolio = (done) => {
@@ -244,7 +243,7 @@
           <img id="icon-phone" src="./assets/icons/phone.png">
           <img id="icon-email" src="./assets/icons/email.png">
           <img id="icon-web" src="./assets/icons/web.png">
-          <img id="icon-location" src="./assets/icons/more-links.png">
+          <img id="icon-location" src="./assets/icons/morelinks.png">
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
