--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <img id="icon-phone" src="./assets/icons/phone.png">
           <img id="icon-email" src="./assets/icons/email.png">
           <img id="icon-web" src="./assets/icons/web.png">
-          <img id="icon-location" src="./assets/icons/morelinks.png">
+          <img id="icon-location" src="./assets/icons/web.png">
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
