--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
+    <meta aframe-injected="" name="theme-color" content="black">
+
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image-aframe.prod.js"></script>
@@ -42,7 +47,7 @@
           currentTab = 'web';
         });
         locationButton.addEventListener('click', function (evt) {
-          console.log("links");
+          console.log("loc");
           text.setAttribute("value", "View more links");
           currentTab = 'location';
         });
