--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
           <img id="icon-play" src="./assets/icons/play.png">
           <img id="icon-left" src="./assets/icons/left.png">
           <img id="icon-right" src="./assets/icons/right.png">
+          <video id="ex-holo-video-mp4" autoplay loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
+          <video id="ex-holo-video-webm" autoplay loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
           <img id="pma-about-preview-img" src="./assets/portfolio/exintrovid-preview.png">
           <video id="pma-about-video-mp4" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.mp4" playsinline="" webkit-playsinline=""></video>
           <video id="pma-about-video-webm" autoplay="false" loop="true" src="./assets/portfolio/exintrovid.webm" playsinline="" webkit-playsinline=""></video>
@@ -290,17 +292,21 @@
             <a-image visible="false" id="portfolio-right-button" class="clickable" src="#icon-right" position="0.7 0 0" height="0.15" width="0.15" material="" geometry=""></a-image>
           </a-entity>
 
-          <a-image visible="false" id="phone-button" class="clickable" src="#icon-phone" position="-0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-entity id="ex-holo-video">
+            <a-video src="#ex-holo-video-mp4" webkit-playsinline="" playsinline="" width="1" height="0.552" position="0.1 0 0" material="" geometry=""></a-video>
+          </a-entity>
 
-          <a-image visible="false" id="email-button" class="clickable" src="#icon-email" position="-0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="phone-button" class="clickable" src="#icon-phone" position="-0.42 -0.3 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="0.14 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="email-button" class="clickable" src="#icon-email" position="-0.14 -0.3 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-image visible="false" id="more-links-button" class="clickable" src="#icon-more-links" alpha-test="0.5" position="0.42 -0.5 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
+          <a-image visible="false" id="web-button" class="clickable" src="#icon-web" alpha-test="0.5" position="0.14 -0.3 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-gltf-model id="avatar" rotation="0 0 0" position="0 0 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
+          <a-image visible="false" id="more-links-button" class="clickable" src="#icon-more-links" alpha-test="0.5" position="0.42 -0.3 0" height="0.15" width="0.15" animation="property: scale; to: 1.2 1.2 1.2; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate" material="" geometry=""></a-image>
 
-          <a-text id="text" class="clickable" value="" color="black" align="center" width="2" position="0 -1 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
+          <a-gltf-model id="avatar" rotation="0 0 0" position="-0.7 0.5 0" scale="0.01 0.01 0.01" src="#avatarModel" gltf-model=""></a-gltf-model>
+
+          <a-text id="text" class="clickable" value="Click icon then click here" color="#00b6e5" align="center" width="2" position="0 -0.5 0" geometry="primitive:plane; height: 0.1; width: 2;" material="opacity: 0.5" text=""></a-text>
         </a-entity>
 
         <canvas class="a-canvas a-mouse-cursor-hover" data-aframe-canvas="true" width="1592" height="1828"></canvas>
